adjust landing page designs

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
 <body>
 <div class="flex flex-col h-screen justify-between">
 
-    <main class="h-full mt-12 text-center">
-        <img class="w-[446px] h-auto inline absolute mx-auto left-0 right-0 z-0" src="{{url_for('static',filename='media/circle.png')}}" alt="DDLanding - circle">
+    <main class="h-[550px] mt-[5%] text-center">
+        <img class="w-[20%] h-auto inline z-0" src="{{url_for('static',filename='media/circle.png')}}" alt="DDLanding - circle">
         <button class=" w-72 h-72 rounded-full bg-shade-of-red hover:bg-red-500 text-white font-bold absolute h-auto mx-auto z-30 mt-32 -translate-x-6">Button</button>
-        <img class="w-[401px] h-auto mt-24 inline absolute mx-auto left-0 right-0 z-10" src="{{url_for('static',filename='media/tree.png')}}" alt="DDLanding - tree">
-        <img class="w-[232px] h-auto mt-[543px] z-10 inline absolute mx-auto left-0 right-0 z-10" src="{{url_for('static',filename='media/ddl-logo.png')}}" alt="DDLanding - DDL logo">
+        <img class="w-[19.4%] h-auto mt-[6%] inline absolute mx-auto left-0 right-0 z-10" src="{{url_for('static',filename='media/ddl-logo-tree.png')}}" alt="DDLanding - tree">
+
     </main>
 
     <footer class="relative">
