--- a/templates/index.html
+++ b/templates/index.html
@@ -8,23 +8,24 @@
 </head>
 
 <body>
-<div class="flex flex-col h-screen justify-between">
+<div class="flex flex-col 2xl:h-screen invisible md:visible">
 
-    <main class="h-[550px] mt-[5%] text-center">
-        <img class="w-[20%] h-auto inline z-0" src="{{url_for('static',filename='media/circle.png')}}" alt="DDLanding - circle">
-        <button class=" w-72 h-72 rounded-full bg-shade-of-red hover:bg-red-500 text-white font-bold absolute h-auto mx-auto z-30 mt-32 -translate-x-6">Button</button>
-        <img class="w-[19.4%] h-auto mt-[6%] inline absolute mx-auto left-0 right-0 z-10" src="{{url_for('static',filename='media/ddl-logo-tree.png')}}" alt="DDLanding - tree">
-
+    <main class="relative h-[800px] mt-[15px] 2xl:mt-[75px] text-center">
+        <img class="w-[388px] h-auto inline z-0" src="{{url_for('static',filename='media/circle.png')}}" alt="DDLanding - circle">
+        <button class="w-[75px] h-[75px] rounded-full bg-shade-of-red hover:bg-shade-of-orange hover:scale-150 transition duration-500 text-white text-sm absolute h-auto mx-auto left-0 right-[230px] z-30 mt-[150px]">DD Library</button>
+        <button class="w-[75px] h-[75px] rounded-full bg-shade-of-red hover:bg-shade-of-orange hover:scale-150 transition duration-500 text-white text-sm absolute h-auto mx-auto left-0 right-0 z-30 mt-[100px]">DD Courses</button>
+        <button class="w-[75px] h-[75px] rounded-full bg-shade-of-red hover:bg-shade-of-orange hover:scale-150 transition duration-500 text-white text-sm absolute h-auto mx-auto left-[230px] right-0 z-30 mt-[150px]">DD Classroom</button>
+        <img class="w-[360px] h-auto mt-[100px] inline absolute mx-auto left-0 right-0 z-10" src="{{url_for('static',filename='media/ddl-logo-tree.png')}}" alt="DDLanding - tree">
     </main>
 
-    <footer class="relative">
-        <img class="w-full" src="{{url_for('static',filename='media/bg.png')}}" alt="Background image">
-        <div class="absolute bottom-0 w-full h-20 border-t-2 text-center border-duron-mindful-gray bg-transparent">
-            <div class="mt-3 divide-x-2 divide-duron-mindful-gray">
+    <footer>
+        <img class="inline" src="{{url_for('static',filename='media/bg.png')}}" alt="Background image" style="min-height: 250px;">
+        <div class="-mt-16 border-t-2 text-center border-duron-mindful-gray">
+            <div class="mt-1 mb-1 divide-x-2 divide-duron-mindful-gray">
                 <a href="https://cw4wafghan.ca" target="_blank">
                     <img class="h-14 w-48 inline mr-2" src="{{url_for('static',filename='media/cw4wafghan-logo.png')}}" alt="CW4WAfghan logo">
                 </a>
-                <div class="inline-block">
+                <div class="inline-block bottom-0">
                     <span class="ml-2 font-sans text-xl"><a href="https://cw4wafghan.ca" target="_blank">cw4wafghan.ca</a></span>
                 </div>
             </div>
