--- a/templates/ddlanding.html
+++ b/templates/ddlanding.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{ _("Darakht-e Danesh Academi") }}</title>
+        <link rel="shortcut icon" href="{{url_for('static',filename='media/favicon.ico')}}" />
         <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
         <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"
                 integrity="bf1809e3c17d86667dd0b9e10bd809cbe7bb76979486c23b06eec1504bf3be19"
