--- a/templates/ddlanding.html
+++ b/templates/ddlanding.html
@@ -17,7 +17,7 @@
             <div class="flex-1"></div>
             <span class="inline-block font-sans text-xl"><a href="#">{{ _("Darakht-e Danesh Academi") }}</a></span>
             <div class="text-end inline-block flex-1">
-                <button id="dropdownMobileLanguage" data-dropdown-toggle="dropdown1" class="text-white bg-shade-of-brown hover:bg-different-shade-of-brown rounded-lg px-1 py-1 me-2" type="button"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5h12M9 3v2m1.048 9.5A18.022 18.022 0 016.412 9m6.088 9h7M11 21l5-10 5 10M12.751 5C11.783 10.77 8.07 15.61 3 18.129"></path></svg></button>
+                <button id="dropdownMobileLanguage" data-dropdown-toggle="dropdown1" class="text-white bg-shade-of-brown hover:bg-different-shade-of-brown rounded-lg px-1 py-1 me-2" type="button"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" aria-describedby="{{ _("Select language") }}" aria-disabled="true" stroke-linejoin="round" stroke-width="2" d="M3 5h12M9 3v2m1.048 9.5A18.022 18.022 0 016.412 9m6.088 9h7M11 21l5-10 5 10M12.751 5C11.783 10.77 8.07 15.61 3 18.129"></path></svg></button>
             </div>
             <!-- Dropdown menu -->
             <div id="dropdown1" class="hidden z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow">
