--- a/templates/ddlanding.html
+++ b/templates/ddlanding.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </footer>
-        <div class="hidden md:flex flex-col 2xl:h-screen">
+        <div class="hidden md:flex flex-col 2xl:h-fit">
             <div class="text-end">
                 <button id="dropdownDesktopLanguage" data-dropdown-toggle="dropdown" class="text-white bg-shade-of-brown hover:bg-different-shade-of-brown font-medium rounded-lg text-sm justify-center px-2 py-2.5 mt-4 me-2 text-center inline-flex items-center" type="button">{% if g.locale == 'en' %}English{% elif g.locale == 'fa' %}فارسی{% else %}پښتو{% endif %} <svg class="ms-2 w-4 h-4" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
             </div>
@@ -67,7 +67,7 @@
                   </li>
                 </ul>
             </div>
-            <main class="relative h-[900px] mt-[15px] 2xl:mt-[75px] text-center">
+            <main class="relative h-[600px] mt-[15px] 2xl:mt-[75px] text-center">
                 <img class="w-[388px] h-auto inline z-0" src="{{url_for('static',filename='media/circle.png')}}" alt="DDLanding - circle">
                 <button class="w-[78px] h-[78px] rounded-full bg-shade-of-red hover:bg-shade-of-orange hover:scale-150 transition duration-500 text-white text-sm absolute h-auto mx-auto ltr:left-0 ltr:right-[230px] rtl:right-0 rtl:left-[230px] z-30 mt-[150px]" onclick="location.href='https://library.darakhtdanesh.org/{{ potential_query_string }}'" type="button">{{ _("DD Library") }}</button>
                 <button class="w-[78px] h-[78px] rounded-full bg-shade-of-red hover:bg-shade-of-orange hover:scale-150 transition duration-500 text-white text-sm absolute h-auto mx-auto left-0 right-0 z-30 mt-[100px]" onclick="location.href='https://courses.darakhtdanesh.org'" type="button">{{ _("DD Courses") }}</button>
@@ -75,8 +75,8 @@
                 <img class="w-[360px] h-auto mt-[100px] inline absolute mx-auto left-0 right-0 z-10" src="{{url_for('static',filename='media/ddl-logo-tree.png')}}" alt="DDLanding - tree">
             </main>
 
-            <footer>
-                <img class="inline" src="{{url_for('static',filename='media/bg.png')}}" alt="Background image" style="min-height: 250px;">
+            <footer class="">
+                <img class="" src="{{url_for('static',filename='media/bg.png')}}" alt="Background image" style="min-height: 250px;">
                 <div class="-mt-16 border-t-2 text-center border-duron-mindful-gray">
                     <div class="mt-1 mb-1 divide-s-2 divide-duron-mindful-gray">
                         <a href="https://cw4wafghan.ca" target="_blank">
