--- a/templates/ddlanding.html
+++ b/templates/ddlanding.html
@@ -18,7 +18,7 @@
                     <!-- Modal header -->
                     <div class="flex items-start justify-between p-4 border-b rounded-t bg-black">
                         <h3 class="text-xl font-semibold text-white">
-                            {{ _("Introducing <a href=\"https://dararkhtdanesh.org/\" class=\"hover:text-duron-mindful-gray\"><u>Darakht-e Danesh Academi</u></a>") }}
+                            {{ _("Introducing <a href=\"https://darakhtdanesh.org/\" class=\"hover:text-duron-mindful-gray\"><u>Darakht-e Danesh Academi</u></a>") }}
                         </h3>
                         <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-toggle="defaultModal">
                             <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
@@ -31,7 +31,7 @@
                             {{ _("darakhtdanesh.org (ddl.af) has a new look. We've brought together our open educational resource collection
                             <a href=\"https://library.darakhtdanesh.org/en\" class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">DD Library</a>, our asynchronous course platform
                             <a href=\"https:/courses.darakhtdanesh.org/\" class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">DD Courses</a>, and our live teaching site
-                            <a href=\"https://classroom.darakhtdanesh.org\" class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">DD Classroom</a> into a single landing page: <b>Darakht-e Danesh Academi</b>.
+                            <a href=\"https://courses.darakhtdanesh.org/course/index.php?categoryid=7\" class=\"text-shade-of-orange hover:text-very-dark-shade-of-orange\">DD Classroom</a> into a single landing page: <b>Darakht-e Danesh Academi</b>.
                             You can access each of the individual sites by clicking on the corresponding red circle in the graphic.
                             We are continuing to improve the site design!") }}
                         </p>
